# sfe

./: .dockerignore  .env.example  .gitignore  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.proxy.yml  pyproject.toml  sfe_white_paper.md
assets/: 202606152310 - Prompt Midjourney.txt
benchmarks/: tasks.json
cognitive_map/: __init__.py  flow.py  workspace.py  zones.py
docs/: 10_INDEX.md  20_INSTALL.md  30_USAGE.md  40_CONFIGURATION.md  50_ARCHITECTURE.md  55_REAL_LOOP.md  60_BENCHMARKS.md  70_FAQ.md  FAQ.md  INDEX.md  INSTALL.md  ai-coded.md  aider_env_bridge.md  aider_filesystem_executor_integration.md  alibaba_comparable_benchmark_runs.md  alibaba_deepseek_smoke_note.md  alibaba_deepseek_structural_spatial_smoke_note.md  alibaba_large_contextual_missing_tiers.md  alibaba_progressive_benchmark_note.md  alibaba_provider_history.md  alibaba_router_smoke_note.md  alibaba_structural_50k_comparison_note.md  anthropic_benchmark_paced_summary.md  codex_enabled_streaming_guard_milestone.md  codex_enabled_streaming_replacement_smoke.md  codex_shadow_routing_milestone.md  current_architecture_status.md  decisions.md  effectiveness.md  enabled_mode_smoke_milestone.md  execution_mode_router_contract.md  high_overlap_authority_gap_fixture_expansion_design.md  high_overlap_diagnostic_bucketing_notes.md  high_overlap_fixture_expansion_phase_close.md  high_overlap_history.md  high_overlap_new_fixtures_selector_smoke_notes.md  high_overlap_subtle_poison_progression_summary.md  large_contextual_benchmark_report.md  large_real_world_history.md  (+35 more)
(+674 files in other folders)
