[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sfe"
version = "0.1.0"
description = "Spatial Field Engine for Cognition"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "PolyForm Noncommercial License 1.0.0" }
dependencies = []

[tool.setuptools]
packages = ["sfe", "cognitive_map", "sfe_proxy"]

[tool.pytest.ini_options]
addopts = "--capture=sys"
