[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sfe"
version = "0.1.0"
description = "Spatial Field Engine for Cognition"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "mcp>=1.27.0,<2.0.0",
    "prompt_toolkit>=3.0.0",
]

[project.scripts]
sfe-mcp = "sfe_mcp.__main__:main"

[tool.setuptools]
packages = ["sfe", "cognitive_map", "sfe_tui", "sfe_mcp"]

[tool.pytest.ini_options]
addopts = "--capture=sys"
